Signed-off-by: heguojing <happyjing5@sina.cn>

--- a/ad/index.html
+++ b/ad/index.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
-<link href="/screen/css/style.css" rel="stylesheet" type="text/css">
-<script type="text/javascript" src="/screen/js/jquery.js"></script>
-<script type="text/javascript" src="/screen/js/jquery.SuperSlide.js"></script>
+<link href="/ad/screen/css/style.css" rel="stylesheet" type="text/css">
+<script type="text/javascript" src="/ad/screen/js/jquery.js"></script>
+<script type="text/javascript" src="/ad/screen/js/jquery.SuperSlide.js"></script>
 </head>
 <body scroll="no">
 	<div class="second-screen-main">
@@ -17,8 +17,8 @@
 				<div class="bd">
 					<ul>
 						<!--<li><a href="#" target="_blank"><img src="/static/pos/screen/img/second-screen-03.jpg" /></a></li>-->
-						<li><a href="#" target="_blank"><img src="/screen/img/second-screen-01.jpg" /></a></li>
-						<li><a href="#" target="_blank"><img src="/screen/img/second-screen-02.jpg" /></a></li>
+						<li><a href="#" target="_blank"><img src="/ad/screen/img/second-screen-01.jpg" /></a></li>
+						<li><a href="#" target="_blank"><img src="/ad/screen/img/second-screen-02.jpg" /></a></li>
 					
 					</ul>
 				</div>
