Signed-off-by: heguojing <happyjing5@sina.cn>

--- a/ad/index.html
+++ b/ad/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>副屏广告</title>
 <link href="/ad/screen/css/style.css" rel="stylesheet" type="text/css">
 <script type="text/javascript" src="/ad/screen/js/jquery.js"></script>
 <script type="text/javascript" src="/ad/screen/js/jquery.SuperSlide.js"></script>
